--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,74 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
+  padding: 0;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  box-sizing: border-box;
+}
+
+body, html {
+  font-family: "Ubuntu", sans-serif;
+}
+
+:root {
+  /* colors */
+  --white: #ffffff;
+  --orange: #F07232;
+  --black: #000000;
+
+  /* shadow */
+  --shadow: 0px 2px 4px rgba(0,0,0,0.3);
+
+  /* border-radius */
+  --radius: 10px;
+}
+
+/* fonts, font-sizes, font-weighs, etc, etc. */
+h1, h2, h3, h4, h5, h6, .title {
+  font-family: "Teko", serif;
+}
+
+p, span {
+  font-size: 16px;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-family: 36px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+h2 {
+  font-family: 32px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+h3 {
+  font-family: 28px;
+
+}
+
+h4 {
+  font-family: 26px;
+
+}
+
+h5 {
+  font-family: 22px;
+
+}
+
+h6 {
+  font-family: 20px;
+}
+
+strong {
+  font-size: inherit;
+  font-weight: 600;
+}
+
+.weak {
+  font-size: inherit;
+  font-weight: 300;
+}
+
+/* container */
+.container {
+  width: min(calc(100% - 5rem), 1100px); /* hvad end er mindst, bliver værdien der bliver anvendt. */
+  margin-inline: auto; /* centered */
 }
