--- a/src/comps/nav/nav.module.css
+++ b/src/comps/nav/nav.module.css
@@ -7,10 +7,11 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        padding-block: 15px;
     }
 
     > .content .logo {
-        height: 50px;
+        height: 35px;
         width: auto;
         aspect-ratio: 152/97; /* dimensioner, så det hele passer. Skal have auto på en af dimensionerne, og en anden sat, siden en boks, hvis img tag, så kunne jeg bare lave en af dimensionerne, og auto på den anden. Måske en bedre vej. */
 
@@ -28,22 +29,23 @@
             height: 2px;
             background-color: var(--white);
             transition: transform 0.2s, background-color 0.2s;
+        
+            @media(max-width: 300px) {
+                width: 30px;
+            }
+        
         }
 
         .line:has(+.line) {
-            margin-bottom: 7px;
+            margin-bottom: 9px;
         }
     }
 
     > .content > .hamburger:is(.active) {
         z-index: 91; /* så over navbaren. */
-
-        > .line {
-            background-color: var(--orange);
-        }
         
         > .line:nth-child(1) {
-            transform: translateY(9px) rotate(45deg);
+            transform: translateY(11px) rotate(45deg);
         }
 
         > .line:nth-child(2) {
@@ -51,7 +53,7 @@
         }
 
         > .line:nth-child(3) {
-            transform: translateY(-9px) rotate(-45deg);
+            transform: translateY(-11px) rotate(-45deg);
         }
     }
 
@@ -74,14 +76,28 @@
 
     > .content > .menu > ul {
         list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+
+        @media(max-height: 500px) {
+            gap: 20px;
+        }
+
+        li {
+            width: 100%;
+            text-align: end;
+        }
 
         a {
             text-decoration: none;
             color: var(--white);
-        }
-
-        li {
             font-size: 20px;
+            transition: color 0.2s;
+        
+            &:hover {
+                color: var(--orange);
+            }
         }
     }
 
