--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@ body, html {
   --white: #ffffff;
   --orange: #F07232;
   --black: #000000;
+  --grey: #ABABAB;
+  --secondGrey: #777777;
 
   /* shadow */
   --shadow: 0px 2px 4px rgba(0,0,0,0.3);
@@ -24,6 +26,7 @@ body, html {
 /* fonts, font-sizes, font-weighs, etc, etc. */
 h1, h2, h3, h4, h5, h6, .title {
   font-family: "Teko", serif;
+  font-weight: 400;
 }
 
 p, span {
@@ -31,30 +34,30 @@ p, span {
 }
 
 h1 {
-  font-family: 36px;
+  font-size: 40px;
 }
 
 h2 {
-  font-family: 32px;
+  font-size: 36px;
 }
 
 h3 {
-  font-family: 28px;
+  font-size: 32px;
 
 }
 
 h4 {
-  font-family: 26px;
+  font-size: 30px;
 
 }
 
 h5 {
-  font-family: 22px;
+  font-size: 26px;
 
 }
 
 h6 {
-  font-family: 20px;
+  font-size: 24px;
 }
 
 strong {
