--- a/src/comps/footer/footer.module.css
+++ b/src/comps/footer/footer.module.css
@@ -45,6 +45,10 @@
             position: relative;
             top: 50%; /* flytter 50% ned af, relativt til sin basale position, som er i toppen. */
             transform: translateY(-50%); /* siden den så har sin egen top ved midten, så -50%, så i forhold til sin egen størrelse med translatey, bliver den flyttet med halvdelen af sin egen størrelse. */
+        
+            @media(max-width: 350px) {
+                height: 25px;
+            }
         }
 
         > ul a {
@@ -52,6 +56,11 @@
             width: 50px;
             border-radius: 100%;
             background-color: rgb(from var(--secondGrey) r g b / 0.45); /* fandt på¨stackoverflow, at en hex color code kunne bruges i rgba sådan her. Bruger ikke opacity, eftersom den impacter text. */
+        
+            @media(max-width: 350px) {
+                height: 40px;
+                width: 40px;
+            }
         }
 
     }
