--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body, html {
+body, html, input, button {
   font-family: "Ubuntu", sans-serif;
 }
 
@@ -27,6 +27,7 @@ body, html {
 h1, h2, h3, h4, h5, h6, .title {
   font-family: "Teko", serif;
   font-weight: 400;
+  line-height: 1;
 }
 
 p, span {
@@ -78,4 +79,12 @@ strong {
 
 button, a, input[type="submit"] {
   cursor: pointer;
+}
+
+.smallTitle {
+  color: var(--orange);
+  font-weight: 300;
+  text-transform: uppercase;
+  line-height: 0.9;
+  font-size: 25px;
 }
