--- a/src/comps/trainersSection/trainersSection.module.css
+++ b/src/comps/trainersSection/trainersSection.module.css
@@ -30,6 +30,13 @@
     }
 
     .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 20px;
 
+        @media(max-width: 300px) {
+            display: flex;
+            flex-direction: column;
+        }
     }
 }
