--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,8 @@ button, a, input[type="submit"] {
   color: var(--orange);
   font-weight: 300;
   text-transform: uppercase;
-  line-height: 0.9;
-  font-size: 25px;
+  line-height: 1.2;
+  font-size: 18px;
+  letter-spacing: 0.5ch;
+  margin-block-end: 5px;
 }
