--- a/src/comps/spinner/spinner.module.css
+++ b/src/comps/spinner/spinner.module.css
@@ -1,9 +1,7 @@
 .con {
   width: min(100%, 400px);
-  margin-inline: auto;
+  margin-inline: 0px;
 
-  display: grid;
-  place-content: center;
   padding-block: 10px;
   padding-inline: 10px;
 
@@ -17,5 +15,11 @@
 
   &:is(.whitebc) span {
     border-color: var(--orange) var(--orange) transparent !important;
+  }
+
+  &:is(.center) {
+    margin-inline:auto;
+    display: grid;
+    place-content: center;
   }
 }
