--- a/src/comps/button/button.module.css
+++ b/src/comps/button/button.module.css
@@ -26,7 +26,7 @@
     transition: box-shadow 0.2s, background-color 0.2s;
 
     width: 200px;
-    margin-inline: auto;
+    margin-inline: 0px;
 
 
     @media(max-width: 300px) {
