--- a/src/comps/statementsSec/statementsSec.module.css
+++ b/src/comps/statementsSec/statementsSec.module.css
@@ -68,9 +68,10 @@
     }
 
     .quoteSec > div {
-        flex: 1;
-        min-width: 0;
-    } /* så swiper ikke overflower, så den tager op hele boksen, tænker jeg, med flex: 1; Ikke 50 50% af parrent, siden kun en har flex: 1; */
+/*         flex: 1;
+        min-width: 0; */
+        min-width: 0%; /* gør sådan at der kan stretches. */
+    } /* så swiper ikke overflower, siden det er lavet med flexbox, og så capper vi hvor stort det kan flekse så og sige. */
 
     .navigation {
         display: flex;
@@ -85,7 +86,7 @@
         width: auto;
     }
 
-    .navigation div {
+    .navigation div, .nextEl, .prevEl {
         cursor: pointer;
         height: 45px;
         width: 45px;
@@ -100,6 +101,15 @@
     .navigation div:hover {
         background-color: var(--orange);
         border: 1px solid var(--orange);
+    }
+
+    .boxCon {
+        @media(max-width: 800px) {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-inline: auto;
+        }
     }
 
 
