--- a/src/comps/services/Services.module.css
+++ b/src/comps/services/Services.module.css
@@ -83,6 +83,8 @@
 
 
     .btn {
+        display: block;
+        text-decoration: none;
         margin-block-start: -20px;
         margin-block-end: 20px;
     }
