--- a/src/comps/AboutIntroduction/AboutIntroduction.module.css
+++ b/src/comps/AboutIntroduction/AboutIntroduction.module.css
@@ -3,9 +3,9 @@
     background-color: var(--white);
 
     header {
-            padding-block: 30px;
+        padding-block: 30px;
         display: grid;
-        grid-template-columns: repeat(2, 50%);
+        grid-template-columns: repeat(2, 1fr);
         background-color: transparent;
         gap: 15px;
 
@@ -74,6 +74,10 @@
         background-size: cover;
 
         padding-block: 20px 70px;
+
+        @media(min-width: 750px) {
+            padding-block: 20px 120px;
+        }
     }
 
     .stats > .content {
@@ -154,6 +158,9 @@
  */
         @media(max-width: 400px) {
             aspect-ratio: 1/1.2;
+        }
+        @media(min-width: 750px) {
+            transform: translateY(-100px);
         }
     }
 
