--- a/src/comps/button/button.module.css
+++ b/src/comps/button/button.module.css
@@ -103,4 +103,8 @@
     &.center {
         margin-inline: auto;
     }
+
+    &:is(:not(.transparrent)):hover {
+        box-shadow: 0px 4px 6px rgba(0,0,0,0.3);
+    }
 }
