--- a/src/comps/contact/contact.module.css
+++ b/src/comps/contact/contact.module.css
@@ -20,7 +20,7 @@
         
         position: absolute;
         inset: 0;
-        opacity: 0.4;
+        opacity: 0.5;
         z-index: -1;
     }
 
@@ -57,9 +57,26 @@
 
         padding-block: 15px;
 
-        input:has(+ input), input:has(+ textarea), textarea:has(+ button) {
-            margin-bottom: 25px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        div {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
         }
+
+        @media(min-width: 800px) {
+            div {
+                display: flex;
+                flex-direction: row;
+            }
+        }
+
+/*         input:has(+ input), input:has(+ textarea), textarea:has(+ button) {
+            margin-bottom: 25px;
+        } */
 
         input:is(:not(input[type="submit"])), textarea {
             width: 100%;
@@ -85,7 +102,7 @@
 
         &::after {
             background-image: var(--pic2);
-            opacity: 1;
+            opacity: 0.7;
         }
 
         img {
