--- a/src/comps/nav/nav.module.css
+++ b/src/comps/nav/nav.module.css
@@ -37,7 +37,7 @@
         cursor: pointer;
         display: block; /* så de tager hele linjen. */
 
-        @media(min-width: 750px) {
+    @media(min-width: 1000px) {
             display:none;
         }
 
@@ -79,28 +79,31 @@
     }
 
     > .content > .menu.show {
-        display:block;
-        position:fixed;
-        inset: 0;
-        z-index: 90; /* så over alt ALT content. */
-        background-color: var(--black);
+        @media(max-width: 1000px) {
+             display:block;
+            position:fixed;
+            inset: 0;
+            z-index: 90; /* så over alt ALT content. */
+            background-color: var(--black);
     
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            
+            .links {
+                display: flex;
+                flex-direction: column;
+                gap: 22px;
+            }
+
+            .links li {
+                width: 100%;
+                text-align: end;
+            }
+        }
     }
 
-     .content  .menu.show .links {
-        display: flex;
-        flex-direction: column;
-        gap: 22px;
-
-        li {
-            width: 100%;
-            text-align: end;
-        }
-        }
 
     > .content > .menu > ul {
         list-style-type: none;
@@ -117,7 +120,7 @@
     }
     }
 }
-@media(min-width: 750px) {
+@media(min-width: 1000px) {
     
 .nav .content .menu {
     display: inline-block;   
